2015-01-16  Jonathan Wakely  <jwakely@redhat.com>

	* acinclude.m4: Fix typo in comment.
	* configure: Regenerate.
	* include/bits/codecvt.h (codecvt<char16_t, char, mbstate_t>,
	codecvt<char16_t, char, mbstate_t>): Declare specializations.
	* include/bits/locale_facets.h: Reserve space for new specializations.
	* src/c++11/Makefile.am: Add codecvt.cc.
	* src/c++11/Makefile.in: Regenerate.
	* src/c++11/codecvt.cc: New.
	* src/c++98/Makefile.am: Compile locale_init.cc and localename.cc
	with -std=gnu++11.
	* src/c++98/Makefile.in: Regenerate.
	* src/c++98/locale_init.cc: Initialize new codecvt specializations.
	* src/c++98/localename.cc: Likewise.
	* config/abi/pre/gnu.ver: Exports for new codecvt specializations.
	* testsuite/22_locale/codecvt/utf8.cc: New.
	* testsuite/22_locale/locale/cons/unicode.cc: Check that new
	specializations are installed in locale objects.

2015-01-16  Torvald Riegel  <triegel@redhat.com>

	* include/std/shared_mutex (shared_timed_mutex): Add POSIX-based
	implementation.

2015-01-13  Jonathan Wakely  <jwakely@redhat.com>

	PR libstdc++/64571
	* config/abi/pre/gnu.ver: Export fstream functions using new string.

2015-01-12  Jonathan Wakely  <jwakely@redhat.com>

	PR libstdc++/64560
	* src/c++11/cxx11-shim_facets.cc (locale::facet::_M_sso_shim): Check
	for RTTI support.

	PR libstdc++/64553
	* src/c++11/cxx11-shim_facets.cc: Check for wchar_t support.

2015-01-10  Thomas Schwinge  <thomas@codesourcery.com>

	* doc/xml/manual/parallel_mode.xml: Update for libgomp being
	renamed from "GNU OpenMP Runtime Library" to "GNU Offloading and
	Multi Processing Runtime Library".

2015-01-09  Jonathan Wakely  <jwakely@redhat.com>

	PR libstdc++/64476
	* include/bits/stl_uninitialized.h (uninitialized_copy): Fix
	is_assignable arguments.
	* testsuite/20_util/specialized_algorithms/uninitialized_copy/64476.cc:
	New.

2015-01-09  Andreas Tobler  <andreast@gcc.gnu.org>

	* libsupc++/unwind-cxx.h: Revert previous commit.
